<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/dark_login_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/profile"
        android:textColor="@color/lovelyWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="394dp"
        android:layout_height="212dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/displayUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultTextBox"
            android:textColor="@color/lovelyWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/displayQuestionsAnswered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultTextBox"
            android:textColor="@color/lovelyWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/displayTotalCorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultTextBox"
            android:textColor="@color/lovelyWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/displayAvgPercentCorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultTextBox"
            android:textColor="@color/lovelyWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/displayQuestionsContributed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultTextBox"
            android:textColor="@color/lovelyWhite"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="@color/analogousPurple"
        android:onClick="logOut"
        android:text="@string/logOut"
        android:textColor="@color/lovelyWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/seeYouSoon"
        android:textColor="@color/lovelyWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logOutButton" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:onClick="goToSelectionScreen"
        android:text="@string/start"
        android:textColor="@color/lovelyWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>